--- a/Inputs/Inputs/Inputs.vcxproj
+++ b/Inputs/Inputs/Inputs.vcxproj
@@ -170,11 +170,13 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="GamePad.cpp" />
+    <ClCompile Include="InputManager.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="PC.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GamePad.h" />
+    <ClInclude Include="InputManager.h" />
     <ClInclude Include="KeyBoard.h" />
     <ClInclude Include="Mouse.h" />
     <ClInclude Include="PC.h" />
