errors and warning messages

--- a/Inputs/Inputs/Inputs.vcxproj
+++ b/Inputs/Inputs/Inputs.vcxproj
@@ -176,6 +176,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="GamePad.h" />
+    <ClInclude Include="Errors.h" />
     <ClInclude Include="InputManager.h" />
     <ClInclude Include="KeyBoard.h" />
     <ClInclude Include="Mouse.h" />
