--- a/Inputs/Inputs/Inputs.vcxproj.filters
+++ b/Inputs/Inputs/Inputs.vcxproj.filters
@@ -44,5 +44,8 @@
     <ClInclude Include="InputManager.h">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
+    <ClInclude Include="Errors.h">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
