add some stuff & rename
Added :
- is released action
- possibility to anyone to create is own function (done PlayStation for example)
- can change vibration left & right of Gamepads
- operator(string) for if action is triggered on an input
- can now redefine action

change :
- rename a lot of stuff
- divided keyboard & mouse on two different class (remove Pc namespace & computer class)

fix :
- battery

--- a/Inputs/Inputs/Inputs.vcxproj
+++ b/Inputs/Inputs/Inputs.vcxproj
@@ -174,10 +174,10 @@
   <ItemGroup>
     <ClInclude Include="GamePad.h" />
     <ClInclude Include="Errors.h" />
-    <ClInclude Include="InputManager.h" />
+    <ClInclude Include="InputImpl.h" />
+    <ClInclude Include="Inputs.h" />
     <ClInclude Include="KeyBoard.h" />
     <ClInclude Include="Mouse.h" />
-    <ClInclude Include="PC.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
